playbooks/roles/k3s_setup/files/my-charts/longhorn/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: homelab
      namespace: kube-system
      sectionName: websecure
  hostnames:
    - longhorn.homelab.local
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
